# haskell-boilerplate

./: .gitignore  README.md  boilerplate.cabal  guard.sh  tests.sh
src/: Boilerplate.hs
test/: Properties.hs  Spec.hs  TestHelper.hs
