name:                boilerplate
version:             0.1.0.0
synopsis:            Project boilerplate.
description:         Project boilerplate.
license:             Apache-2.0
license-file:        LICENSE
author:              Rob Howard
maintainer:          rob@robhoward.id.au
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-implicit-prelude -fwarn-missing-import-lists
  hs-source-dirs:      src
  exposed-modules:     Boilerplate
  build-depends:       base                  >= 4.7 && < 4.8

test-suite specs
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base                  >= 4.7 && < 4.8
                     , boilerplate
                     , hspec                 >= 1.8 && < 3

test-suite props
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall
  hs-source-dirs:      test
  main-is:             Properties.hs
  build-depends:       base                  >= 4.7 && < 4.8
                     , boilerplate
                     , QuickCheck            == 2.*
